--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "astro-icon": "^1.0.2",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "typescript-esbuild": "^0.3.5",
     "unpic": "^3.16.0"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "@astrojs/tailwind": "5.1.0",
     "@iconify-json/flat-color-icons": "^1.1.10",
     "@iconify-json/tabler": "^1.1.103",
+    "@playform/build": "0.0.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash.merge": "^4.6.9",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
