--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
     "astro": "^4.1.1",
-    "astro-icon": "^1.0.2",
+    "astro-icon": "^1.1.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "unpic": "^3.16.0"
@@ -31,6 +31,7 @@
     "@astrojs/tailwind": "5.1.0",
     "@iconify-json/flat-color-icons": "^1.1.10",
     "@iconify-json/tabler": "^1.1.103",
+    "@iconify/tools": "^4.0.4",
     "@playform/build": "0.0.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash.merge": "^4.6.9",
@@ -49,6 +50,6 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=18.14.1"
+    "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   }
 }
