--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@jaakkq/karkkainen.net",
-  "description": "The project focuses on creating and maintaining a robust and customizable website building tool that caters to the specific needs and design preferences of karkkainen.net",
-  "version": "1.0.1",
+  "description": "",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "deploy": ".deploy.bat",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier -w .",
