--- a/src/config.yaml
+++ b/src/config.yaml
@@ -9,7 +9,7 @@ metadata:
   title:
     default: Rene Kärkkäinen
     template: '%s — Rene Kärkkäinen'
-  description: 'Finnish technology student at Business College Helsinki, with a background at WithSecure, a leading Nordic cyber security company. Skilled in IT infrastructure, networking, cyber security, web development, and data analysis. Actively seeking opportunities in IT from all over the world to contribute in enhancing system security.'
+  description: 'Experienced in server network construction, network security and little in IT management. Developed skills in IT infrastructure, cyber security and software development over the past 5 years. Native Finnish speaker and proficient in English, with a strong interest for technology and a commitment to growth and survival in the ICT field.'
   robots:
     index: true
     follow: true
