--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jaakkq/karkkainen.net",
-  "description": "",
-  "version": "1.0.2",
+  "description": "My Personal Website",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -13,24 +13,24 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.4.0",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
-    "astro": "^4.1.1",
+    "astro": "^5.8.0",
     "astro-icon": "^1.1.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "unpic": "^3.18.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.3",
-    "@astrojs/partytown": "^2.1.1",
-    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/flat-color-icons": "^1.1.10",
     "@iconify-json/tabler": "^1.1.103",
-    "@playform/build": "0.0.7",
+    "@playform/build": "^0.2.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash.merge": "^4.6.9",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
